# aesonClone

./: y.cabal
lib/: Init.hs  Mod1.hs  MyLib.hs
